<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_activity1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    tools:context="ru.nbauer.app1.counter.activity1">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
       android:paddingTop="@dimen/activity_vertical_margin"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/codeText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="36sp"
        android:textAlignment="center" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/middle_space" />

    <Button
        android:text="@string/button1"
        android:tag="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:text="@string/button2"
        android:tag="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_marginBottom="20dip"
        android:id="@+id/button2"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp" />

    <Button
        android:text="@string/button3"
        android:tag="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:text="@string/button4"
        android:tag="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:layout_marginRight="20dip"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_toLeftOf="@+id/button5"
        android:layout_toStartOf="@+id/button5"
        android:layout_marginEnd="20dip"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp" />

    <Button
        android:text="@string/button5"
        android:tag="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp"
        android:layout_above="@+id/middle_space"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button6"
        android:tag="6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:layout_marginLeft="20dip"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp" />

    <Button
        android:text="@string/button7"
        android:tag="7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:text="@string/button8"
        android:tag="8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_marginTop="20dip"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp" />

    <Button
        android:text="@string/button9"
        android:tag="9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:text="@string/button_clear"
        android:tag="clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_clear"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:background="@drawable/btn_clear"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/button0"
        android:layout_alignBottom="@+id/button0"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7" />

    <Button
        android:text="@string/button0"
        android:tag="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button0"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:background="@drawable/btn"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp"
        android:layout_below="@+id/button8"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:layout_marginTop="20dip" />

    <Button
        android:text="@string/button_done"
        android:tag="done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_done"
        android:minHeight="70dip"
        android:minWidth="70dip"
        android:background="@drawable/btn_done"
        android:textColor="@color/colorButtonColor"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/button0"
        android:layout_alignBottom="@+id/button0"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9" />

</RelativeLayout>
